[package]
name = "bitcoin-puzzle-solver"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking"] }
bitcoin_hashes = "0.16"
secp256k1 = "0.30"
bitcoin = "0.32"
hex = "0.4"
num_cpus = "1.16"
thousands = "0.2.0"
